JUST-9: Made toolbar responsive.

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -2,14 +2,14 @@
     <!-- Toolbar -->
     <div class="row align-items-center" role="banner" id="toolbar">
         <!-- Home button -->
-        <div class="col-sm-2 col-md-2">
+        <div class="col-sm-2 col-md-2 d-none d-sm-block">
             <a href="/index.html">
                 <img class="img-fluid toolbar-icon" alt="My Shop Home" src="../assets/home-button.png" id="home-button" />
             </a>
         </div>
 
         <!-- Search bar -->
-        <div class="row col-7">
+        <div class="row col-8 col-sm-7 col-md-8">
             <div class="input-group">
                 <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
                     aria-describedby="search-addon" />
@@ -17,8 +17,7 @@
             </div>
         </div>
 
-        <!-- <div class="no-padding text-right ml-auto col-sm-3 col-md-3"> -->
-        <div class=" no-padding text-right ml-auto col-3 row">
+        <div class=" no-padding text-right ml-auto col-4 col-sm-3 col-md-2 row">
             <div class="virtical-centered-div col-4">
                 <button type="button" class="btn btn-primary btn-sm">Login</button>
             </div>
