JUST-9: Fixed shrinking images & added breakpoints component.

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -2,14 +2,14 @@
     <!-- Toolbar -->
     <nav class="navbar p-0 m-0 fixed-top navbar-light row align-items-center" role="banner" id="toolbar">
         <!-- Home button -->
-        <div class="nav-item col-sm-2 col-md-2 d-none d-sm-block">
+        <div class="nav-item col-sm-3 col-md-2 d-none d-sm-block">
             <a class="nav-link" href="/index.html">
-                <img class="img-fluid toolbar-icon" alt="My Shop Home" src="../assets/home-button.png" id="home-button" />
+                <img class="toolbar-icon" alt="My Shop Home" src="../assets/home-button.png" id="home-button" />
             </a>
         </div>
 
         <!-- Search bar -->
-        <div class="nav-item row col-8 col-sm-7 col-md-8">
+        <div class="nav-item row col-8 col-sm-6 col-md-7">
             <form class="input-group">
                 <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
                     aria-describedby="search-addon" />
@@ -17,7 +17,7 @@
             </form>
         </div>
 
-        <div class="nav-item text-right ml-auto col-4 col-sm-3 col-md-2 row">
+        <div class="nav-item text-right ml-auto col-4 col-sm-3 col-md-3 row">
             <!-- Login/Profile button -->
             <div class="virtical-centered-div col-4">
                 <a href="/login">
@@ -28,32 +28,11 @@
             <!-- Shopping Cart button -->
             <div class="col-8">
                 <a href="/shopping-cart">
-                    <img class="img-fluid toolbar-icon" alt="Shopping Cart" src="../assets/shopping-cart-icon.svg" id="shopping-cart-button" />
+                    <img class="toolbar-icon" alt="Shopping Cart" src="../assets/shopping-cart-icon.svg" id="shopping-cart-button" />
                 </a>
             </div>
         </div>
     </nav>
 
-    <!-- Display the current column breakpoint. -->
-    <div class="row" style="padding: 100px;">
-        <div class="col-12 d-block d-sm-none">
-            <h1>Size: X-Small</h1>
-        </div>
-        <div class="col-sm-12 d-sm-block d-none d-md-none">
-            <h1>Size: Small</h1>
-        </div>
-        <div class="col-md-12 d-md-block d-none d-lg-none">
-            <h1>Size: Medium</h1>
-        </div>
-        <div class="col-lg-12 d-lg-block d-none d-xl-none">
-            <h1>Size: Large</h1>
-        </div>
-        <div class="col-xl-12 d-xl-block d-none">
-            <h1>Size: X-Large</h1>
-        </div>
-        <div class="col-xxl-12 d-xxl-block d-none">
-            <h1>Size: XX-Large</h1>
-        </div>
-    </div>
-
+    <cj-breakpoints></cj-breakpoints>
 </div>
