JUST-9: Upgrade to bootstrap 5.0 & fix xxl sizes.

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -2,14 +2,14 @@
     <!-- Toolbar -->
     <nav class="navbar p-0 m-0 fixed-top navbar-light row align-items-center" role="banner" id="toolbar">
         <!-- Home button -->
-        <div class="nav-item col-sm-3 col-md-2 d-none d-sm-block">
+        <div class="nav-item col-sm-3 col-md-2 col-xxl-1 d-none d-sm-block">
             <a class="nav-link" href="/index.html">
                 <img class="toolbar-icon" alt="My Shop Home" src="../assets/home-button.png" id="home-button" />
             </a>
         </div>
 
         <!-- Search bar -->
-        <div class="nav-item row col-8 col-sm-6 col-md-7">
+        <div class="nav-item row col-8 col-sm-6 col-md-7 col-lg-8 col-xxl-9">
             <form class="input-group">
                 <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
                     aria-describedby="search-addon" />
@@ -17,7 +17,7 @@
             </form>
         </div>
 
-        <div class="nav-item text-right ml-auto col-4 col-sm-3 col-md-3 row">
+        <div class="nav-item text-right ml-auto col-4 col-sm-3 col-md-3 col-lg-2 col-xxl-2 row">
             <!-- Login/Profile button -->
             <div class="virtical-centered-div col-4">
                 <a href="/login">
