--- a/src/app/breakpoints/breakpoints.component.html
+++ b/src/app/breakpoints/breakpoints.component.html
@@ -12,7 +12,7 @@
     <div class="col-lg-12 d-lg-block d-none d-xl-none">
         <h1>Size: Large</h1>
     </div>
-    <div class="col-xl-12 d-xl-block d-none">
+    <div class="col-xl-12 d-xl-block d-none d-xxl-none">
         <h1>Size: X-Large</h1>
     </div>
     <div class="col-xxl-12 d-xxl-block d-none">
