JUST-9: Changed to use SCSS.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<div>
+<div class="container-fluid">
   <cj-banner></cj-banner>
+  <ng-content></ng-content>
+  <cj-breakpoints></cj-breakpoints>
 </div>
