--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,38 +1,35 @@
-<div class="container-fluid">
-    <!-- Toolbar -->
-    <nav class="navbar p-0 m-0 fixed-top navbar-light row align-items-center" role="banner" id="toolbar">
-        <!-- Home button -->
-        <div class="nav-item col-sm-3 col-md-2 col-xxl-1 d-none d-sm-block">
-            <a class="nav-link" href="/index.html">
-                <img class="toolbar-icon" alt="My Shop Home" src="../assets/home-button.png" id="home-button" />
+<!-- Toolbar -->
+<nav class="navbar p-0 m-0 fixed-top navbar-light row align-items-center" role="banner" id="toolbar">
+    <!-- Home button -->
+    <div class="nav-item col-sm-3 col-md-2 col-xxl-1 d-none d-sm-block">
+        <a class="nav-link" href="/index.html">
+            <img class="toolbar-icon" alt="My Shop Home" src="../assets/home-button.png" id="home-button" />
+        </a>
+    </div>
+
+    <!-- Search bar -->
+    <div class="nav-item row col-8 col-sm-6 col-md-7 col-lg-8 col-xxl-9">
+        <form class="input-group">
+            <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
+                aria-describedby="search-addon" />
+            <button type="button" class="btn btn-outline-primary">search</button>
+        </form>
+    </div>
+
+    <div class="nav-item text-right ml-auto col-4 col-sm-3 col-md-3 col-lg-2 col-xxl-2 row">
+        <!-- Login/Profile button -->
+        <div class="virtical-centered-div col-4">
+            <a href="/login">
+                <button type="button" class="btn btn-primary btn-sm">Login</button>
             </a>
         </div>
 
-        <!-- Search bar -->
-        <div class="nav-item row col-8 col-sm-6 col-md-7 col-lg-8 col-xxl-9">
-            <form class="input-group">
-                <input type="search" class="form-control rounded" placeholder="Search" aria-label="Search"
-                    aria-describedby="search-addon" />
-                <button type="button" class="btn btn-outline-primary">search</button>
-            </form>
+        <!-- Shopping Cart button -->
+        <div class="col-8">
+            <a href="/shopping-cart">
+                <img class="toolbar-icon" alt="Shopping Cart" src="../assets/shopping-cart-icon.svg"
+                    id="shopping-cart-button" />
+            </a>
         </div>
-
-        <div class="nav-item text-right ml-auto col-4 col-sm-3 col-md-3 col-lg-2 col-xxl-2 row">
-            <!-- Login/Profile button -->
-            <div class="virtical-centered-div col-4">
-                <a href="/login">
-                    <button type="button" class="btn btn-primary btn-sm">Login</button>
-                </a>
-            </div>
-
-            <!-- Shopping Cart button -->
-            <div class="col-8">
-                <a href="/shopping-cart">
-                    <img class="toolbar-icon" alt="Shopping Cart" src="../assets/shopping-cart-icon.svg" id="shopping-cart-button" />
-                </a>
-            </div>
-        </div>
-    </nav>
-
-    <cj-breakpoints></cj-breakpoints>
-</div>
+    </div>
+</nav>
